Fixed issues on CSS for Kati's Website

--- a/CSS/kati.css
+++ b/CSS/kati.css
@@ -61,7 +61,7 @@ footer a:hover{
     background-color: transparent;
 }
 p.caption{
-    color: yellow;
+    color: midnightblue;
     font-style: italic;
     margin-top: 0;
 }
