--- a/CSS/kati.css
+++ b/CSS/kati.css
@@ -13,6 +13,9 @@ header{
 h1, h2{
     font-family: font-family: "Playwrite CU", cursive;
 }
+/* header styles */
+/* write your comment here */
+
 header h1{
     color: rgb(113, 211, 211);
     font-size: 40px;
